fix: docs-site, syntax
Co-Authored-By: David Campion <gasolinewaltz@gmail.com>

--- a/packages/effects-docs/src/home.pug
+++ b/packages/effects-docs/src/home.pug
@@ -16,7 +16,7 @@
       switch event.type {
         case 'log': {
           console.log(event)
-          resume
+          recall null
         }
       }
     }
