fix: serve assets from effectsjs root for github pages

--- a/packages/effects-docs/effectsjs/layout.pug
+++ b/packages/effects-docs/effectsjs/layout.pug
@@ -1,9 +1,9 @@
 html
   head
-    link("rel"="stylesheet", href='/styles.css')
-    link(rel="stylesheet", href="/highlight/styles/solarized-light.css")
+    link("rel"="stylesheet", href='/effectsjs/styles.css')
+    link(rel="stylesheet", href="/effectsjs/highlight/styles/solarized-light.css")
     link(rel="stylesheet", href="//fonts.googleapis.com/css?family=Ubuntu+Mono&display=swap")
-    script(src="/highlight/highlight.pack.js")
+    script(src="/effectsjs/highlight/highlight.pack.js")
     script hljs.initHighlightingOnLoad()
   body
     .node.hero
@@ -13,9 +13,9 @@ html
         +logo
       ul.nav
         li
-          a(href='/') home
+          a(href='/effectsjs/') home
         li
-          a(href='/examples.html') examples
+          a(href='/effectsjs/examples.html') examples
     block main
     .node.footer
 
