feat: scroll down when logs overflow in y in virtual console

--- a/packages/effects-docs/effectsjs/components/editor/styles.css
+++ b/packages/effects-docs/effectsjs/components/editor/styles.css
@@ -9,9 +9,10 @@
     left: 0; */
 }
 
-#editorRunOutput {
+#virtualConsole {
     background: rgba(39, 40, 34, 0.8);
     color: white;
+    overflow-y: auto;
     height: 200px;
     padding: 16px;
 }
