--- a/packages/effects-docs/effectsjs/examples.pug
+++ b/packages/effects-docs/effectsjs/examples.pug
@@ -9,5 +9,5 @@ block main
   block example_title
   .node#editor
     block editor_text
-  .node#editorRunOutput
+  .node#virtualConsole
   block post_editor
