--- a/packages/effects-docs/effectsjs/examples.pug
+++ b/packages/effects-docs/effectsjs/examples.pug
@@ -7,6 +7,11 @@ block main
   script
     include ./editor.js
   block example_title
+  .node#editorOptions
+    label(for='autoeval') auto-eval
+    input#toggle_autoeval_control(type='checkbox',checked, name='autoeval')
+    div#run_control Run
+      .arrow-right
   .node#editor
     block editor_text
   .node#virtualConsole
