--- a/packages/effects-docs/src/components/layout.css
+++ b/packages/effects-docs/src/components/layout.css
@@ -9,6 +9,17 @@ body {
   padding-left: 8px;
 }
 
+/* content */
+#content h1,
+#content h2,
+#content h3,
+#content h4,
+#content img,
+#content p
+{
+  padding: 0 8px;
+}
+
 /* nav */
 ul.nav, .nav li {
   display: inline;
